<resources>
    <string name="app_name">Relay Sync</string>
    <string name="min_fault_current">Min fault current</string>
    <string name="max_fault_current">Max fault current</string>
    <string name="shift_relay_up">Shift relay up</string>
    <string name="shift_down_relay">Shift down relay</string>
    <string name="max_load_current">Max load current</string>
    <string name="calculate">Calculate</string>
    <string name="tap_button_to_add_a_relay">Tap + button to add a relay…</string>
    <string name="empty_list">empty list</string>
    <string name="delete">Delete</string>
    <string name="ct_ratio">CT Ratio</string>
    <string name="tms">TMS</string>
    <string name="psm">PSM</string>
    <string name="top">Top</string>
    <string name="voltage_rating_v">Voltage Rating (V)</string>
    <string name="power_rating_mva">Power Rating (MVA)</string>
    <string name="earthing_resistance_ohm">Earthing Resistance (ohm)</string>
    <string name="percentage_protection">Percentage Protection (%)</string>
    <string name="current_setting">Current Setting (%)</string>
    <string name="k3">k3</string>
    <string name="k2">k2</string>
    <string name="k1">k1</string>

    <string-array name="magnitudes">
        <item>-ve</item>
        <item>0</item>
        <item>+ve</item>
    </string-array>

</resources>
