<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/positionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/neutral"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/maxLoadCurrentEditText"
        app:layout_constraintEnd_toStartOf="@+id/maxLoadCurrentEditText"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/maxLoadCurrentEditText"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/maxLoadCurrentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/max_load_current"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/minFaultCurrentEditText"
        app:layout_constraintEnd_toStartOf="@+id/upButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/positionTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/upButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/shift_relay_up"
        app:layout_constraintBottom_toBottomOf="@+id/maxLoadCurrentEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maxLoadCurrentEditText"
        app:layout_constraintTop_toTopOf="@+id/maxLoadCurrentEditText"
        app:srcCompat="@drawable/up_icon" />

    <EditText
        android:id="@+id/minFaultCurrentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/min_fault_current"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/maxFaultCurrentEditText"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxLoadCurrentEditText" />

    <EditText
        android:id="@+id/maxFaultCurrentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/max_fault_current"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/downButton"
        app:layout_constraintStart_toEndOf="@+id/minFaultCurrentEditText"
        app:layout_constraintTop_toBottomOf="@+id/maxLoadCurrentEditText" />

    <ImageButton
        android:id="@+id/downButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shift_down_relay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/upButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/upButton"
        app:layout_constraintTop_toBottomOf="@+id/maxLoadCurrentEditText"
        app:srcCompat="@drawable/down_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>