<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/delete_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/deleteImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteImageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/plain_background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/maxLoadTIL"
            app:layout_constraintEnd_toStartOf="@+id/maxLoadTIL"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/maxLoadTIL"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/maxLoadTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/minFaultCurrentTIL"
            app:layout_constraintEnd_toStartOf="@+id/upButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/positionTextView"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/maxLoadCurrentEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/max_load_current"
                android:inputType="number"
                android:textColor="@color/neutral"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/upButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/shift_relay_up"
            app:layout_constraintBottom_toBottomOf="@+id/maxLoadTIL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/maxLoadTIL"
            app:layout_constraintTop_toTopOf="@+id/maxLoadTIL"
            app:srcCompat="@drawable/up_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/minFaultCurrentTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/maxFaultCurrentTIL"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxLoadTIL">

            <EditText
                android:id="@+id/minFaultCurrentEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/min_fault_current"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/maxFaultCurrentTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/downButton"
            app:layout_constraintStart_toEndOf="@+id/minFaultCurrentTIL"
            app:layout_constraintTop_toBottomOf="@+id/maxLoadTIL">

            <EditText
                android:id="@+id/maxFaultCurrentEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/max_fault_current"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/downButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shift_down_relay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/upButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/upButton"
            app:layout_constraintTop_toBottomOf="@+id/maxLoadTIL"
            app:srcCompat="@drawable/down_icon" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxFaultCurrentTIL" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>